--- a/Tianmin_Kang_Final_Paper.ipynb
+++ b/Tianmin_Kang_Final_Paper.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOy4nz//1gjXw4tsFmfvP+z",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Tianmkang/NLP_Analysis/blob/main/Tianmin_Kang_Final_Paper.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -30,7 +42,8 @@
       "execution_count": 132,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "owWkOglreuhr",
         "outputId": "1bd873d0-ea89-475e-b49d-b9350dc57cfb"
@@ -80,7 +93,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "wfOeanoxfWHg",
         "outputId": "5015faae-847a-487d-ff49-f2287c05c65b"
@@ -118,7 +132,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "r9JFvZt2fWyp",
         "outputId": "11e158c2-18ce-4add-aa09-7c1b0107c7ba"
@@ -702,7 +717,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "YtytoFGT0oL5",
         "outputId": "3720ff5e-3fcf-46ae-c7fd-d4848a4214b9"
@@ -1865,7 +1881,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Lh_DJHw-66u2",
         "outputId": "c5cd82e5-f106-43f6-a5eb-7cc78995b503"
@@ -1964,7 +1981,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "fTSFKrG58DVI",
         "outputId": "936da000-c2c3-4b34-ff83-fdd8aafc7518"
@@ -3148,7 +3166,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "V2C9dJvDAIfV",
         "outputId": "b72707a8-5e79-4cab-ee09-d85243046315"
@@ -3210,7 +3229,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**This is the result of negative emotion words**"
+        "**This is the result of negative emotion words**\n",
+        "\n",
+        "An independent-samples t-test revealed a significant difference in the proportion of negative emotion words between political and entertainment comments.\n",
+        "\n",
+        "Political comments (M = 0.049, SD = 0.054) contained a higher proportion of negative emotion words than entertainment comments (M = 0.036, SD = 0.045). This difference was statistically significant, t(df) = –9.17, p < .001, and the effect size was small (Cohen’s d = 0.263). These results indicate that political discussions express greater overall negative emotionality compared to entertainment discussions, even when controlling for comment length.\n"
       ],
       "metadata": {
         "id": "XWI74ycsCdua"
@@ -3830,7 +3853,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "bxAP18J6EG1Z",
         "outputId": "30420f6a-2cdf-42ae-f9ab-e7f882c0161c"
@@ -3893,7 +3917,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "No clear difference in adj"
+        "A second t-test examined whether the two domains differed in their overall use of adjectives. The test results showed no significant difference between political (M = 0.0748, SD = 0.063) and entertainment comments (M = 0.0750, SD = 0.060), t(df) = 0.13, p = .90, Cohen’s d = –0.004.\n",
+        "\n",
+        "This effect size is effectively zero, indicating that political and entertainment comments use adjectives nearly identical. Thus, differences in emotional tone between the two domains cannot be attributed to differences in the overall density of adjectival language. It does not support the idea that the adjectives are crucial for emotion expression in online discourse."
       ],
       "metadata": {
         "id": "2S2_X57MEZQb"
@@ -3953,7 +3979,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "OUiKyE28oOTI",
         "outputId": "d29b318e-925b-4267-b96a-12230869372d"
@@ -4018,16 +4045,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "No significant difference\n",
+        "The proportion of adjectives that are also negative emotion words was similarly compared across domains. The results again showed no significant difference between political (M = 0.125, SD = 0.281) and entertainment comments (M = 0.124, SD = 0.283), t(df) = –0.11, p = .91, Cohen’s d = 0.003.\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "These results indicate that, among the adjectives used, political and entertainment comments are equally likely to employ adjectives with negative emotional meaning."
       ],
       "metadata": {
         "id": "y-mlBwyR0q2t"
